simple/test/features/errors/semantic/e1033_invalid_self_import.spl
# E1033: Invalid Self Import

Feature: E1033 - Invalid Use of Self in Import Path
  As a Simple compiler
  I want to detect invalid use of `self` in import paths
  So that imports use proper module paths

  Background:
    Given I have the Simple compiler

  Scenario: Self at start of absolute import
    When I compile:
      '''
      use self::module::Item  # Error: invalid self in absolute import
      '''
    Then I should see error E1033 at line 1
    And the error message should be "invalid use of `self` in import path"
    And the label should indicate "invalid `self` in import"
    And the help should suggest "use proper module path for imports"

  Scenario: Self in wrong position
    When I compile:
      '''
      use crate::self::Item  # Error: self in wrong position
      '''
    Then I should see error E1033

  Scenario: Valid relative import with self
    When I compile:
      '''
      mod submodule:
        pub fn helper():
          # implementation

      use self::submodule::helper  # OK if self allowed for relative
      '''
    Then compilation should succeed if relative imports supported

  Scenario: Valid absolute import
    When I compile:
      '''
      use std::collections::HashMap
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      use self::invalid::path
      '''
    Then I should see error E1033
    And the error message should contain "잘못된 Self 임포트"
